[package]
name = "rouler"
description = "A container-like system for generating dice rolls"
keywords = ["dice", "roller", "RPG", "game", "gaming"]
version = "0.2.1"
readme = "README.md"
authors = ["jarcane <jarcane@users.noreply.github.com>"]
license = "MPL-2.0"
homepage = "https://github.com/jarcane/rouler"
documentation = "https://docs.rs/rouler/"
repository = "https://github.com/jarcane/rouler"

[dependencies]
pest = "1.0"
pest_derive = "1.0"
lazy_static = "1.0"
rand = "0.5"
